--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -7,9 +7,9 @@ disqus:
 google-ID: ''
 
 menu:
-- {name: 'About',   url: 'about.html'}
-- {name: 'Writing', url: 'writing.html'}
-- {name: 'Contact', url: 'contact.html'}
+- {name: 'Hardware',   url: '#hardware-design'}
+- {name: 'Software', url: '#battery-management-software'}
+- {name: 'Contact', url: '#contact'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
